devops/jenkins_home/jobs/prf-project/builds/4/log
Started by user [8mha:////4MuocfCO+jIADSn3g9peS8j8/jr6Qm2BF8C8Nq6opzwIAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Running as SYSTEM
Building in workspace /var/jenkins_home/workspace/prf-project
The recommended git tool is: NONE
No credentials specified
 > git rev-parse --resolve-git-dir /var/jenkins_home/workspace/prf-project/.git # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/Elink69/prf_beadando.git # timeout=10
Fetching upstream changes from https://github.com/Elink69/prf_beadando.git
 > git --version # timeout=10
 > git --version # 'git version 2.39.5'
 > git fetch --tags --force --progress -- https://github.com/Elink69/prf_beadando.git +refs/heads/*:refs/remotes/origin/* # timeout=10
 > git rev-parse refs/remotes/origin/main^{commit} # timeout=10
Checking out Revision f4d043e76d6ec4750c8e62bba1121d1f3c988351 (refs/remotes/origin/main)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f f4d043e76d6ec4750c8e62bba1121d1f3c988351 # timeout=10
Commit message: "test"
 > git rev-list --no-walk 8df58ff1d14a91011c35766eed49c0c631de9a81 # timeout=10
[prf-project] $ /bin/sh -xe /tmp/jenkins11863533655423921696.sh
+ cd app/server
+ npm install

added 315 packages, changed 1 package, and audited 519 packages in 44s

69 packages are looking for funding
  run `npm fund` for details

3 low severity vulnerabilities

To address all issues, run:
  npm audit fix

Run `npm audit` for details.
[prf-project] $ /bin/sh -xe /tmp/jenkins2145338272425882730.sh
+ cd app/server
+ npm run build

> server@1.0.0 build
> npx tsc

[prf-project] $ /bin/sh -xe /tmp/jenkins7962249613684887067.sh
+ cd app/server
+ npm run test

> server@1.0.0 test
> jest --runInBand

FAIL tests/server.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /var/jenkins_home/workspace/prf-project/app/server/tests/server.test.ts:1
    import request from "supertest";
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.241 s
Ran all test suites.
Build step 'Execute shell' marked build as failure
Finished: FAILURE
